--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
 
       <section id="about-us">
         <div>
-          <img src="./assets/images/cooker-img.png" alt="">
-          <h2>Your <span>Restaurant’s</span></h2>
-          <h2>Website Has To Look <span>Good</span></h2>
-          <hr>
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          <img class="container reveal" src="./assets/images/cooker-img.png" alt="">
+          <h2 class="container reveal">Your <span>Restaurant’s</span></h2>
+          <h2 class="container reveal">Website Has To Look <span>Good</span></h2>
+          <hr class="container reveal">
+          <p class="container reveal"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et
             dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
             aute irure dolor in reprehenderit in
@@ -133,7 +134,7 @@
       <!-- SECTION BLOG  -->
       <section id="section-blog">
         <h2>Latest <span>From</span> the <span>Blog</span></h2>
-        <hr />
+        <hr class="container reveal">
 
         <div class="flex-box-blog">
           <div class="box-img-blog">
@@ -144,9 +145,10 @@
             <h3>
               Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
             </h3>
-            <hr />
+            <hr class="container reveal">
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
+
 
           <div class="box-img-blog">
             <img src="./assets/images/blog/blog-img-2.jpg" alt="blog-img-2" />
@@ -156,16 +158,17 @@
             <h3>
               Homestyle <br class="br-blog"> Chicken<br class="br-blog-due">Pot Pie
             </h3>
-            <hr />
+            <hr>
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
+
 
 
           <div class="box-description-blog-sx">
             <h3 class="tophtre">
               Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
             </h3>
-            <hr />
+            <hr class="container reveal">
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
 
@@ -178,7 +181,7 @@
             <h3>
               Homestyle <br class="br-blog"> Chicken <br class="br-blog-due">Pot Pie
             </h3>
-            <hr />
+            <hr class="container reveal">
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
 
@@ -194,7 +197,7 @@
             <h3>
               Homestyle <br class="br-blog"> Chicken <br class="br-blog-due"> Pot Pie
             </h3>
-            <hr />
+            <hr class="container reveal">
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
 
@@ -206,7 +209,7 @@
             <h3>
               Homestyle <br class="br-blog"> Chicken<br class="br-blog-due"> Pot Pie
             </h3>
-            <hr />
+            <hr class="container reveal">
             <p>Prepared in true New England fash-ion. Tender all-white meat chicken simmered...</p>
           </div>
         </div>
@@ -220,9 +223,10 @@
       <section id="menu_price">
 
         <div id="menu_container">
-          <h2>our <span>MENU</span> the <span>PRICE</span></h2>
-          <hr>
-          <p id="block_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id, delectus unde minima modi
+          <h2 class="container reveal">our <span>MENU</span> the <span>PRICE</span></h2>
+          <hr class="container reveal">
+          <p id="block_p" class="container reveal">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam id,
+            delectus unde minima modi
             officiis iure omnis illum porro voluptates aspernatur autem dolorem itaque obcaecati non inventore maxime
             excepturi quam.</p>
 
@@ -230,7 +234,7 @@
 
         <h3 id="menu_price_title">featured <span>on the week</span></h3>
         <ul id="menu_list">
-          <li>
+          <li class="container reveal">
             <h3>Pancakes n' Such<span>$ 25.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -238,7 +242,7 @@
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
-          <li>
+          <li class="container reveal">
             <h3>Homestyle Chicken Pot Pie<span>$ 10.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -246,7 +250,7 @@
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
-          <li>
+          <li class="container reveal">
             <h3>Cereal, Panecillos y Frutas<span>$ 5.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -254,7 +258,7 @@
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
-          <li>
+          <li class="container reveal">
             <h3>Meat of Skewers<span>$ 15.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -262,7 +266,7 @@
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
-          <li>
+          <li class="container reveal">
             <h3>Steak with a Garlic and Parsley Risotto<span>$ 75.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -270,7 +274,7 @@
               velit
               enim. Debitis ullam consectetur natus quo ratione</p>
           </li>
-          <li>
+          <li class="container reveal">
             <h3>Caesar Salad<span>$ 7.00</span>
               <div class="bottom_border"></div>
             </h3>
@@ -288,9 +292,10 @@
 
       <section id="news">
         <div id="news_container">
-          <h2>SUBSCRIBE <span>to our</span> NEWSLETTER</h2>
+          <h2 class="container reveal">SUBSCRIBE <span>to our</span> NEWSLETTER</h2>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsam ex omnis</p>
+          <p class="container reveal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsam ex
+            omnis</p>
 
           <div id="news_form">
             <input type="email" placeholder="Enter your email to subscribe...">
@@ -306,9 +311,9 @@
 
       <section id="contacts">
         <div id="contacts_heading">
-          <h2>our <span>CONTACT US</span> </h2>
-          <hr>
-          <h3>SIGN UP FOR <span>EMAIL ALERTS</span></h3>
+          <h2 class="container reveal">our <span>CONTACT US</span> </h2>
+          <hr class="container reveal">
+          <h3 class="container reveal fade-left">SIGN UP FOR <span>EMAIL ALERTS</span></h3>
         </div>
 
         <div id="form">
