--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
-          <li class="home-li-home"><a href="#">HOME</a></li>
+          <li class="border-button-nav home-li"><a href="#">HOME</a></li>
           <li class="border-button-nav home-li-about"><a href="">ABOUT US</a></li>
           <li class="border-button-nav home-li-blog"><a href="">BLOG</a></li>
           <li class="border-button-nav home-li-menu"><a href="">MENU</a></li>
