--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
     <!-- HEADER  -->
     <header>
 
-      <nav>
-        <h1 id="title-logo">Restaurant's</h1>
-
-        <input type="checkbox" id="check">
+      <nav class="sticky-home">
+        <h1 id="title-logo">Restaurant's</h1> <input type="checkbox" id="check">
         <label for="check" class="checkbtn-nav">
           <i class="fa-solid fa-bars"></i>
         </label>
         <ul>
-          <li class="border-button-nav home-li"><a href="#">HOME</a></li>
-          <li class="border-button-nav home-li-about"><a href="">ABOUT US</a></li>
-          <li class="border-button-nav home-li-blog"><a href="">BLOG</a></li>
-          <li class="border-button-nav home-li-menu"><a href="">MENU</a></li>
-          <li class="border-button-nav home-li-news"><a href="">NEWS</a></li>
-          <li class="border-button-nav home-li-contacts"><a href="">CONTACTS</a></li>
+          <li class="border-button-nav"><a href="#">HOME</a></li>
+          <li class="border-button-nav"><a href="#about-us">ABOUT US</a></li>
+          <li class="border-button-nav"><a href="#section-blog">BLOG</a></li>
+          <li class="border-button-nav"><a href="#menu_price">MENU</a></li>
+          <li class="border-button-nav"><a href="#news">NEWS</a></li>
+          <li class="border-button-nav"><a href="#section-footer-info">CONTACTS</a></li>
         </ul>
       </nav>
     </header>
