--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
           </div>
         </div>
 
-        <div class="section-blog-button">
-          <button><a href="#">MORE INFO</a></button>
+        <div class="section-blog-button" >
+          <button  class="container reveal fade-left" ><a href="#">MORE INFO</a></button>
         </div>
       </section>
 
@@ -353,7 +353,7 @@
             placeholder="Write your email address here...">
           <textarea name="text" id="text_area" class="container reveal fade-top" cols="30" rows="10"
             placeholder="Write your message here..."></textarea>
-          <div id="contact_btn_container">
+          <div id="contact_btn_container" class="container reveal" >
             <button type="submit">SEND YOUR MESSAGE</button>
           </div>
         </div>
