RESTAURANT WEB SITE : completed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
 
     <section id="about-us">
       <div>
-        <img class="container reveal" src="./assets/images/cooker-img.png" alt="">
+        <img class="container reveal"
+          src="./assets/images/Cannavacciuolo-Addios-GIF-Gratis-Da-Scaricare-per-Facebook-e-WhatsApp-GIF-Divertente-Cucine-Da-Incubo.gif"
+          alt="">
         <h2 class="container reveal">Your <span>Restaurant’s</span></h2>
         <h2 class="container reveal">Website Has To Look <span>Good</span></h2>
         <hr class="container reveal">
